# openapi-dataclasses

./: .gitignore  LICENSE  README.md  noxfile.py  pyproject.toml  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md  other.md
.github/workflows/: main.yml
openapi_dataclasses/: configuration.py  main.py
openapi_dataclasses/parser/: classgen.py  constants.py  formatter.py  reference.py
openapi_dataclasses/types/openapi/: __init__.py  components.py  example.py  extdoc.py  field.py  header.py  info.py  link.py  operation.py  parameter.py  path.py  requestbody.py  response.py  schema.py  securityscheme.py  server.py  spec.py  tag.py
openapi_dataclasses/types/python/: __init__.py  attribute.py  context.py  imports.py
openapi_dataclasses/writer/: __init__.py  writer.py
src/openapi_dataclasses/: main.py  meta.py
src/openapi_dataclasses/decoder/: __init__.py  annotated.py  any.py  clazz.py  dataclass.py  decoder.py  dict.py  handler.py  iter.py  none.py  root.py  union.py  util.py  util.pyi
src/openapi_dataclasses/old/: formatter.py  generate.py  schemareference.py  type_resolver.py  types.py  validation.py
src/openapi_dataclasses/parser/: classgen.py  formatter.py  reference.py
src/openapi_dataclasses/templates/: openapi.py
src/openapi_dataclasses/writer/: writer.py
templates/: openapi.py
templates/client/: client.py
tests/: test_decoder.py  test_models.py  test_simple_model.py
tests/model_tests/001_enum/: config.yaml  openapi.json
tests/model_tests/002_class/: config.yaml  openapi.json
tests/model_tests/003_renames/: config.yaml  openapi.json
(+33 files in other folders)
