[metadata]
name = openapi-dataclasses
version = 0.0.1
description = Generate a Client for an OpenAPI spec using dataclasses-json
long_description = Generate a Client for an OpenAPI spec using dataclasses-json
license = MIT
license_files = LICENSE
author = Cal Pratt
author_email = ccpratt4@gmail.com
classifiers =
    Programming Language :: Python :: 3.9
url = https://github.com/cal-pratt/openapi-dataclasses

[options]
package_dir =
    =src
packages = find:
install_requires =
    black == 21.7b0
    dataclasses-json == 0.5.4
    inflection == 0.5.1
    isort == 5.9.3
    jinja2 == 3.0.1
    requests == 2.26.0
python_requires = >=3.9

[options.extras_require]
black =
    black == 21.7b0
flake8 =
    flake8 == 3.9.2
isort =
    isort == 5.9.3
mypy =
    mypy == 0.910
    types-requests == 2.25.2
tests =
    pytest == 6.2.4
    PyYAML == 5.4.1

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    openapi-dataclasses = openapi_dataclasses.main:main

[options.package_data]
openapi_dataclasses.templates = *.j2
openapi_dataclasses.templates.api = *.j2
openapi_dataclasses.templates.models = *.j2

[flake8]
max-line-length = 100

[mypy]
exclude = .*/templates/.*.py
